--- a/whitesource.config
+++ b/whitesource.config
@@ -32,6 +32,7 @@ python.runPipenvPreStep=true
 python.pipenvDevDependencies=true
 python.IgnorePipenvInstallErrors=true
 python.runPoetryPreStep=true
+conda.resolveDependencies=true
 #python.pipPath=pip3
 #python.path=python3
 
